--- a/checker_dir/Makefile
+++ b/checker_dir/Makefile
@@ -6,7 +6,7 @@
 #    By: vifonne <marvin@42.fr>                     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/11/06 19:05:19 by vifonne           #+#    #+#              #
-#    Updated: 2018/12/30 13:00:40 by rvalenti         ###   ########.fr        #
+#    Updated: 2018/12/30 14:13:34 by vifonne          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -32,7 +32,6 @@ NAME		=		checker
 all:	$(NAME)
 
 $(NAME): $(OBJ)
-	make -C $(LIBFT)
 	$(CC) $(OBJ) -o $(NAME) -I $(LIBFT) -I includes/ -L $(LIBFT) -lft
 %.o: %.c
 	$(CC) -I $(LIBFT) -I . -c $< -o $@
