--- a/push_swap_dir/Makefile
+++ b/push_swap_dir/Makefile
@@ -6,25 +6,26 @@
 #    By: vifonne <marvin@42.fr>                     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/11/06 19:05:19 by vifonne           #+#    #+#              #
-#    Updated: 2018/12/31 13:23:36 by vifonne          ###   ########.fr        #
+#    Updated: 2018/12/31 16:24:59 by vifonne          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-SRCS		=		ft_median.c		\
-					ft_arg.c		\
-					ft_op.c			\
-					ft_rev_rot_op.c	\
-					ft_rotate_op.c	\
-					ft_stack.c		\
-					ft_error.c		\
-					ft_init.c		\
-					ft_quick_sort.c	\
-					ft_print_inst.c	\
-					ft_ifsort.c		\
+SRCS		=		ft_median.c			\
+					ft_arg.c			\
+					ft_op.c				\
+					ft_rev_rot_op.c		\
+					ft_rotate_op.c		\
+					ft_stack.c			\
+					ft_error.c			\
+					ft_init.c			\
+					ft_quick_sort.c		\
+					ft_insert_sort.c	\
+					ft_print_inst.c		\
+					ft_ifsort.c			\
 					ft_push_swap.c
 LIBFT		=		../libft/
 OBJ			=		$(SRCS:.c=.o)
-CC			=		gcc -Wall -Wextra -Werror -g -fsanitize=address
+CC			=		gcc -Wall -Wextra -Werror
 NAME		=		push_swap
 .PHONY		=		all $(NAME) $(OBJ) clean fclean re
 
