--- a/push_swap_dir/Makefile
+++ b/push_swap_dir/Makefile
@@ -6,7 +6,7 @@
 #    By: vifonne <marvin@42.fr>                     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/11/06 19:05:19 by vifonne           #+#    #+#              #
-#    Updated: 2018/12/31 16:24:59 by vifonne          ###   ########.fr        #
+#    Updated: 2018/12/31 21:38:43 by vifonne          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -20,6 +20,7 @@ SRCS		=		ft_median.c			\
 					ft_init.c			\
 					ft_quick_sort.c		\
 					ft_insert_sort.c	\
+					ft_spec_sort.c		\
 					ft_print_inst.c		\
 					ft_ifsort.c			\
 					ft_push_swap.c
