--- a/push_swap_dir/Makefile
+++ b/push_swap_dir/Makefile
@@ -6,23 +6,26 @@
 #    By: vifonne <marvin@42.fr>                     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/11/06 19:05:19 by vifonne           #+#    #+#              #
-#    Updated: 2018/12/31 21:38:43 by vifonne          ###   ########.fr        #
+#    Updated: 2019/01/01 15:14:12 by vifonne          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-SRCS		=		ft_median.c			\
-					ft_arg.c			\
-					ft_op.c				\
-					ft_rev_rot_op.c		\
-					ft_rotate_op.c		\
-					ft_stack.c			\
-					ft_error.c			\
-					ft_init.c			\
-					ft_quick_sort.c		\
-					ft_insert_sort.c	\
-					ft_spec_sort.c		\
-					ft_print_inst.c		\
-					ft_ifsort.c			\
+SRCS		=		ft_median.c					\
+					ft_arg.c					\
+					ft_op.c						\
+					ft_pushed_op.c				\
+					ft_rev_rot_op.c				\
+					ft_rev_rot_pushed_op.c		\
+					ft_rotate_op.c				\
+					ft_rotate_pushed_op.c		\
+					ft_stack.c					\
+					ft_error.c					\
+					ft_init.c					\
+					ft_quick_sort.c				\
+					ft_insert_sort.c			\
+					ft_spec_sort.c				\
+					ft_print_inst.c				\
+					ft_ifsort.c					\
 					ft_push_swap.c
 LIBFT		=		../libft/
 OBJ			=		$(SRCS:.c=.o)
